--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ div{
          <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
                  <a href="index.html" class="w3-bar-item w3-button">ಮುಖಪುಟ</a>
                  <a href="about_us.html" class="w3-bar-item w3-button">ನಮ್ಮ ಬಗ್ಗೆ</a>
-                 <a href="contact.html" class="w3-bar-item w3-button">ನಡೆದು ಬಂದ ಹಾದಿ</a>
+                 <a href="nadedubanda.html" class="w3-bar-item w3-button">ನಡೆದು ಬಂದ ಹಾದಿ</a>
                  <a href="resort.html" class="w3-bar-item w3-button">ಸಹಾಯ ವಾಣಿ</a>
                  <a href="kannada.html" class="w3-bar-item w3-button"></a>
             </nav>
@@ -107,3 +107,4 @@ div{
 
     </body>        
 </html>
+
