Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ div{
 
         <div class="w3-container w3-teal">
         <panel class="w3-container  w3-display-center">
-     <center><img src="logou.k.le.s.jpg" class="w3-round" alt="Norway"></center>
+     <center><img src="logou.k.le.s.jpg" class="w3-round" alt="logo"></center>
         </panel>
       </div>
 
@@ -107,5 +107,6 @@ div{
 
     </body>        
 </html>
+
 
 
