Fix navigation links and update HTML structure

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@ div{
         <nav>
          <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
                  <a href="index.html" class="w3-bar-item w3-button">ಮುಖಪುಟ</a>
-                 <a href="nammabagge.html" class="w3-bar-item w3-button">ನಮ್ಮ ಬಗ್ಗೆ</a>
-                 <a href="nadedubanda.html" class="w3-bar-item w3-button">ನಡೆದು ಬಂದ ಹಾದಿ</a>
-                 <a href="resort.html" class="w3-bar-item w3-button">ಸಹಾಯ ವಾಣಿ</a>
-                 <a href="kannada.html" class="w3-bar-item w3-button"></a>
+                 <a href="about_us.html" class="w3-bar-item w3-button">ನಮ್ಮ ಬಗ್ಗೆ</a>
+                 <a href="journey.html" class="w3-bar-item w3-button">ನಡೆದು ಬಂದ ಹಾದಿ</a>
+                 <a href=".html" class="w3-bar-item w3-button">ಸಹಾಯ ವಾಣಿ</a>
+                 <a href=".html" class="w3-bar-item w3-button"></a>
             </nav>
        </div>
     </div>
@@ -107,6 +107,7 @@ div{
 
     </body>        
 </html>
+
 
 
 
