--- a/about_us.html
+++ b/about_us.html
@@ -36,6 +36,20 @@ div{
 #div3 {background-color: lightpink;}
 #div4 {background-color: lightgrey;}
 
+
+table {
+            width: 50%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+
 </style>
 </head>
 
@@ -128,4 +142,5 @@ div{
 </html>
     
     
+
 
