Fix HTML structure and CSS styles in about_us.html
Corrected HTML structure and fixed CSS styles.

--- a/about_us.html
+++ b/about_us.html
@@ -45,7 +45,7 @@ table {
             border: 1px solid black;
             padding: 8px;
             text-align: left;
-            background-color: pale yellow;
+            background-color: pink;
         }
         th {
             background-color:pink;
@@ -259,6 +259,7 @@ table {
 </html>
     
     
+
 
 
 
