Correct HTML structure and styling in about_us.html
Fixed HTML structure and corrected styling issues.

--- a/about_us.html
+++ b/about_us.html
@@ -12,7 +12,7 @@
 
      body{
       font-family: "Noto Sans Kannada", sans-serif; 
-          backgroun-color: lightpink;
+          background-color: lightpink;
      }
 
  body,html{height: 100%;margin:0;font-size:20px;}
@@ -68,8 +68,8 @@ table {
      <div class="w3-container w3-red w3-display-center">  
     <h1><b><center>ನಮ್ಮ ಬಗ್ಗೆ</center></h1>
         </div>
-     <div class="w3-content" style="max-width:2000px;margin-top:46px">
-    <div class="w3-container w3-content w3-teal w3-center w3-padding-64" style="max-width:800px">
+     <div class="w3-content w3-teal" style="max-width:2000px;margin-top:46px">
+    <div class="w3-container w3-content  w3-center w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide"><center><b> ಉ.ಕ.ಲೇ.ಸಂ. ಪದಾಧಿಕಾರಿಗಳ ಯಾದಿ </center></h2>
         <table>
             <thead>
@@ -259,6 +259,7 @@ table {
 </html>
     
     
+
 
 
 
