--- a/about_us.html
+++ b/about_us.html
@@ -45,10 +45,10 @@ table {
             border: 1px solid black;
             padding: 8px;
             text-align: left;
-            background-color: pink;
+            background-color: white;
         }
         th {
-            background-color:pink;
+            background-color: white;
         }
 
 </style>
@@ -259,6 +259,7 @@ table {
 </html>
     
     
+
 
 
 
